# github-widget-lastfm

./: .gitignore  Makefile  README.rst  api.py  hello.py  index.css  pyproject.toml  settings.py  utils.py
assets/: index.css
templates/: index.css  music_template.html
tests/: test_lastfm_github.py
