[tool.poetry]
name = "lastfm-github"
version = "0.1.0"
description = ""
authors = ["Daniel Carvalho <dco3@cin.ufpe.br>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
imgkit = "^1.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
